Feat: 웹폰트로 적용
Co-authored-by: Yoosun-Chang <12201321@inha.edu>
Co-authored-by: yumXD <qkpw99@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+          @font-face {
+            font-family: 'Bazzi';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/Bazzi.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        @font-face {
+            font-family: 'BMJUA';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+  
+      body {
+        font-family: 'Bazzi', 'BMJUA', sans-serif;
+      }
+    </style>
   </head>
   <body>
   </body>
